--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,7 @@
 * { margin:0; padding:0; }
 
 body, html { height:100%; }
-body, button, input, textarea,select, table {
-	font-family:'EB Garamond', serif, sans-serif, 'Noto Sans';
-	font-size:13px;
-}
+body, button, input, textarea,select, table { font-family:'EB Garamond', serif, sans-serif, 'Noto Sans'; font-size:13px; }
 
 ul, li, ol { list-style:none; }
 
@@ -144,11 +141,9 @@ ul, li, ol { list-style:none; }
 .section .article:nth-child(2) .content3 .txt2 { position:absolute; bottom:20%; right:5%; width:40%; height:300px; text-align:center;
                                                 background:#efc51b; padding:40px 2px 0 2px; }
 .section .article:nth-child(2) .content3 .txt2 h1 { font-size:36px; font-family:sans-serif, 'Noto Sans'; font-weight:bold; }									
-.section .article:nth-child(2) .content3 .txt2 p:nth-child(2) { font-size:16px; font-family:sans-serif, 'Noto Sans'; 
-                                                               margin-bottom:30px; }
+.section .article:nth-child(2) .content3 .txt2 p:nth-child(2) { font-size:16px; font-family:sans-serif, 'Noto Sans'; margin-bottom:30px; }
 .section .article:nth-child(2) .content3 .txt2 p:nth-child(3) { width:200px; height:50px; line-height:50px; border:1px solid #c40001;
-                                                               transition:all 0.7s; margin:0 auto; 
-															   font-family:sans-serif, 'Noto Sans'; }
+                                                                transition:all 0.7s; margin:0 auto; font-family:sans-serif, 'Noto Sans'; }
 .section .article:nth-child(2) .content3 .txt2 p:nth-child(3):hover { background:#c40001; }	
 .section .article:nth-child(2) .content3 .txt2 p:nth-child(3):hover a { color:#FFF; }
 .section .article:nth-child(2) .content3 .txt2 p:nth-child(3) a { color:#000; font-size:14px; }
@@ -158,8 +153,7 @@ ul, li, ol { list-style:none; }
 .section .article:nth-child(3) { max-width:1200px; height:612px; margin:0 auto; }
 .section .article:nth-child(3) h2 { font-family:sans-serif, 'Noto Sans'; font-size:30px; font-weight:bold; margin-bottom:20px; }
 
-.section .article:nth-child(3) .swiper-container { margin-left:auto; margin-right:auto;  overflow:hidden; padding:0; z-index:1; 
-                                                   position:relative;  }
+.section .article:nth-child(3) .swiper-container { margin-left:auto; margin-right:auto;  overflow:hidden; padding:0; z-index:1; position:relative;  }
 .section .article:nth-child(3) .swiper-container .swip-b { width:100%; float:left; position:absolute; top:25px; } 
 .section .article:nth-child(3) .swiper-container .swip-b .swiper-button-next { background:none; color:#FFF; display:block; margin-right:91%; }
 .section .article:nth-child(3) .swiper-container .swip-b .swiper-button-next .next { border:2px solid #000; border-radius:3px; }
@@ -195,24 +189,24 @@ ul, li, ol { list-style:none; }
 
 
 /* footer 스타일시트 */
-.footer .footer { max-width:1200px; height:250px; margin:0 auto; }
+.footer .footer-inner { max-width:1200px; height:250px; margin:0 auto; }
 
-.footer .footer .foot-top { text-align:center; padding-top:20px; }
-.footer .footer .foot-top a { color:#FFF; padding:0px 30px; font-size:20px; }
-.footer .footer .foot-top a:hover { color:#efc51b; }
+.footer .footer-inner .foot-top { text-align:center; padding-top:20px; }
+.footer .footer-inner .foot-top a { color:#FFF; padding:0px 30px; font-size:20px; }
+.footer .footer-inner .foot-top a:hover { color:#efc51b; }
 
-.footer .footer .foot-mid { padding-top:20px; }
-.footer .footer .foot-mid img { width:133px; margin-bottom:20px; }
+.footer .footer-inner .foot-mid { padding-top:20px; }
+.footer .footer-inner .foot-mid img { width:133px; margin-bottom:20px; }
 
-.footer .footer .foot-mid .foot-mid1 { text-align:center; padding-top:15px; }
-.footer .footer .foot-mid .foot-mid1 a { color:#FFF; font-size:15px; font-family:sans-serif, 'Noto Sans'; margin-right:40px; }
-.footer .footer .foot-mid .foot-mid1 a:hover { color:#efc51b; }
+.footer .footer-inner .foot-mid .foot-mid1 { text-align:center; padding-top:15px; }
+.footer .footer-inner .foot-mid .foot-mid1 a { color:#FFF; font-size:15px; font-family:sans-serif, 'Noto Sans'; margin-right:40px; }
+.footer .footer-inner .foot-mid .foot-mid1 a:hover { color:#efc51b; }
 
-.footer .footer .foot-mid .foot-mid2 { text-align:center; padding-top:15px;}
-.footer .footer .foot-mid .foot-mid2 p { color:#FFF; font-size:15px; font-family:sans-serif, 'Noto Sans'; margin-right:40px; }
+.footer .footer-inner .foot-mid .foot-mid2 { text-align:center; padding-top:15px;}
+.footer .footer-inner .foot-mid .foot-mid2 p { color:#FFF; font-size:15px; font-family:sans-serif, 'Noto Sans'; margin-right:40px; }
 
-.footer .footer .foot-bot { text-align:center; padding-top:15px; }
-.footer .footer .foot-bot p { color:#FFF; }
+.footer .footer-inner .foot-bot { text-align:center; padding-top:15px; }
+.footer .footer-inner .foot-bot p { color:#FFF; }
 
 
 /* media query */ 
@@ -321,11 +315,11 @@ ul, li, ol { list-style:none; }
 	.section .article:nth-child(3) .swiper-container .swip-b .swiper-button-next { margin-right:-25%; }
 	
 	.footer {}
-	.footer .footer .foot-mid .foot-mid1 a { margin-right:20px; font-size:13px; }
-	.footer .footer .foot-mid .foot-mid2 { padding-top:7px; }
-	.footer .footer .foot-mid .foot-mid2 p { font-size:13px; }
-	.footer .footer .foot-bot { padding-top:7px; }
-	.footer .footer .foot-bot p { font-size:10px; }
+	.footer .footer-inner .foot-mid .foot-mid1 a { margin-right:20px; font-size:13px; }
+	.footer .footer-inner .foot-mid .foot-mid2 { padding-top:7px; }
+	.footer .footer-inner .foot-mid .foot-mid2 p { font-size:13px; }
+	.footer .footer-inner .foot-bot { padding-top:7px; }
+	.footer .footer-inner .foot-bot p { font-size:10px; }
 	
 	.up-btn { bottom:80px; }
 }
