--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,10 @@
 * { margin:0; padding:0; }
 
 body, html { height:100%; }
-body, button, input, textarea,select, table { font-family:'EB Garamond', serif, sans-serif, 'Noto Sans'; font-size:13px; }
+body, button, input, textarea,select, table {
+	font-family:'EB Garamond', serif, sans-serif, 'Noto Sans';
+	font-size:13px;
+}
 
 ul, li, ol { list-style:none; }
 
@@ -141,9 +144,11 @@ ul, li, ol { list-style:none; }
 .section .article:nth-child(2) .content3 .txt2 { position:absolute; bottom:20%; right:5%; width:40%; height:300px; text-align:center;
                                                 background:#efc51b; padding:40px 2px 0 2px; }
 .section .article:nth-child(2) .content3 .txt2 h1 { font-size:36px; font-family:sans-serif, 'Noto Sans'; font-weight:bold; }									
-.section .article:nth-child(2) .content3 .txt2 p:nth-child(2) { font-size:16px; font-family:sans-serif, 'Noto Sans'; margin-bottom:30px; }
+.section .article:nth-child(2) .content3 .txt2 p:nth-child(2) { font-size:16px; font-family:sans-serif, 'Noto Sans'; 
+                                                               margin-bottom:30px; }
 .section .article:nth-child(2) .content3 .txt2 p:nth-child(3) { width:200px; height:50px; line-height:50px; border:1px solid #c40001;
-                                                                transition:all 0.7s; margin:0 auto; font-family:sans-serif, 'Noto Sans'; }
+                                                               transition:all 0.7s; margin:0 auto; 
+															   font-family:sans-serif, 'Noto Sans'; }
 .section .article:nth-child(2) .content3 .txt2 p:nth-child(3):hover { background:#c40001; }	
 .section .article:nth-child(2) .content3 .txt2 p:nth-child(3):hover a { color:#FFF; }
 .section .article:nth-child(2) .content3 .txt2 p:nth-child(3) a { color:#000; font-size:14px; }
@@ -153,7 +158,8 @@ ul, li, ol { list-style:none; }
 .section .article:nth-child(3) { max-width:1200px; height:612px; margin:0 auto; }
 .section .article:nth-child(3) h2 { font-family:sans-serif, 'Noto Sans'; font-size:30px; font-weight:bold; margin-bottom:20px; }
 
-.section .article:nth-child(3) .swiper-container { margin-left:auto; margin-right:auto;  overflow:hidden; padding:0; z-index:1; position:relative;  }
+.section .article:nth-child(3) .swiper-container { margin-left:auto; margin-right:auto;  overflow:hidden; padding:0; z-index:1; 
+                                                   position:relative;  }
 .section .article:nth-child(3) .swiper-container .swip-b { width:100%; float:left; position:absolute; top:25px; } 
 .section .article:nth-child(3) .swiper-container .swip-b .swiper-button-next { background:none; color:#FFF; display:block; margin-right:91%; }
 .section .article:nth-child(3) .swiper-container .swip-b .swiper-button-next .next { border:2px solid #000; border-radius:3px; }
@@ -265,8 +271,8 @@ ul, li, ol { list-style:none; }
 	.section .article:nth-child(3) .box6,
 	.section .article:nth-child(3) .box8 { margin-left:10%; }
 						 										
-	.section .article:nth-child(3) .swiper-container .swip-b { float:left; left:-92%; }
-	.section .article:nth-child(3) .swiper-container .swip-b .swiper-button-next { margin-right:-8%; }
+	.section .article:nth-child(3) .swiper-container .swip-b { float:left; }
+	.section .article:nth-child(3) .swiper-container .swip-b .swiper-button-next { margin-right:80%; }
 	
 	#.up-btn { right:0px; }
 }
@@ -306,20 +312,18 @@ ul, li, ol { list-style:none; }
 	.section .article:nth-child(1) .content .con5 { margin-right:15px; }
 	
 	.section .article:nth-child(2) .content2 img { width:80%; position:static; margin-left:10%; margin-top:30px; }
-	.section .article:nth-child(2) .content2 .txt1 { width:80%; height:200px; text-align:center; margin-left:10%; margin-top:0px; padding-top:5%;
-	                                                      background:rgb(239,197,27); }
-	.section .article:nth-child(2) .content2 .txt1 h1 { font-size:26px; margin-bottom:0px; } 													  	
+	.section .article:nth-child(2) .content2 .txt1 { width:80%; height:200px; text-align:center; margin-left:10%; margin-top:0px; padding-top:5%; background:rgb(239,197,27); }
+	.section .article:nth-child(2) .content2 .txt1 h1 { font-size:26px; margin-bottom:0px; }
 	
-	.section .article:nth-child(3) {}
-	.section .article:nth-child(3) .swiper-container .swip-b { float:left; left:-92%; }
-	.section .article:nth-child(3) .swiper-container .swip-b .swiper-button-next { margin-right:-25%; }
+	.section .article:nth-child(3) { height:760px; }	
+	.section .article:nth-child(3) .swiper-container .swip-b .swiper-button-next { margin-right:65%; } 													  	
 	
 	.footer {}
 	.footer .footer-inner .foot-mid .foot-mid1 a { margin-right:20px; font-size:13px; }
 	.footer .footer-inner .foot-mid .foot-mid2 { padding-top:7px; }
 	.footer .footer-inner .foot-mid .foot-mid2 p { font-size:13px; }
 	.footer .footer-inner .foot-bot { padding-top:7px; }
-	.footer .footer-inner .foot-bot p { font-size:10px; }
+	.footer .footer-inner .foot-bot p { font-size:13px; }
 	
 	.up-btn { bottom:80px; }
 }
